--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Sample Deployment</title>
   <style>
     body {
-      color: #000000;
+      color: #000011;
       background-color: #ffffff;
       font-family: Arial, sans-serif;
       font-size: 16px;
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations!</h1>
+    <h1>Congratulations matey!</h1>
     <h2>You have successfully deployed this website using AWS code services.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
